force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Accounting_Platform__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Platform__c</fullName>
    <label>Accounting Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>