force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Buying_Role__c.field-meta.xml
<CustomField>
    <fullName>Buying_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buying Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>