force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>