force-app/main/default/objects/BizTech_Temp_Obj__c/fields/d2d_token__c.field-meta.xml
<CustomField>
    <fullName>d2d_token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>d2d token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>