force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Field__c</fullName>
    <description>Created this field in production for Alert-1295 SEV 1 incident. Will delete it after incident is resolved.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time Field</label>
    <type>DateTime</type>
</CustomField>