force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Disqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disqualified</label>
    <type>Checkbox</type>
</CustomField>