force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>