force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Founded_Year__c</fullName>
    <label>Founded Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>