force-app/main/default/objects/BizTech_Temp_Obj__c/fields/From_Addresses__c.field-meta.xml
<CustomField>
    <fullName>From_Addresses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FromAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>