force-app/main/default/objects/BizTech_Temp_Obj__c/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FromName</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>