force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Full_Email__c.field-meta.xml
<CustomField>
    <fullName>Full_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full_Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>