force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>