force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Opp_Owner_MisMatch__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_MisMatch__c</fullName>
    <formula>Opportunity__r.Account.Pricing__c != Opportunity__r.Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner MisMatch</label>
    <type>Checkbox</type>
</CustomField>