force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue</label>
    <referenceTo>GradientWorks__Queue__c</referenceTo>
    <relationshipLabel>BizTech Temp Obj</relationshipLabel>
    <relationshipName>BizTech_Temp_Obj</relationshipName>
    <type>Lookup</type>
</CustomField>