force-app/main/default/objects/BizTech_Temp_Obj__c/fields/State_Credit__c.field-meta.xml
<CustomField>
    <fullName>State_Credit__c</fullName>
    <label>State Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>