force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>