force-app/main/default/objects/BizTech_Temp_Obj__c/fields/Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Text_Body__c</fullName>
    <label>TextBody</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>