force-app/main/default/objects/BizTech_Temp_Obj__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>ToAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>